--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
+*.tmp
 
 # Godot-specific ignores
 .import/
@@ -13,3 +14,7 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# Non-redistributable sprite assets
+Assets/Sprites/3rdParty/
+
